# uv-fastapi-example

./: .dockerignore  .env  Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/versions/: cfe285bf75c5_.py
core/: config.py
db/: db_setup.py
pydantic_schemas/: user.py
